[project]
name = "cylera-client"
version = "0.1.0"
description = "Python client for the Cylera Partner API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cylera_client"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
