[project]
name = "cylera-client"
version = "0.3.0"
description = "Python client for the Cylera Partner API"
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Jason Chambers" },
]
keywords = ["cylera", "iot", "medical", "security", "api", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/Cylera/cylera-client"
Repository = "https://github.com/Cylera/cylera-client"
Issues = "https://github.com/Cylera/cylera-client/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cylera_client"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
